--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "effector": "^22.1.2",
+    "effector-react": "^22.0.6",
     "next": "12.0.7",
+    "prettier": "^2.5.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
